tests/codegen/errors/reader/typeclass-data-layout/atom.reader.error.reader.class.missing.close/reader-class-missing-close.mon
;; TEST-ID: tests.codegen.reader-error.reader-class-missing-close
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/typeclass-data-layout
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected ')' to close class definition
;; TEST-ATOM: atom.reader.error.reader.class.missing.close
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.class.missing.close
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected ')' to close class definition
;; TEST-READER-PATH: reader.c:4440 parser.class
;; TEST-CODEGEN-PATH: diagnostic.parser.class
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:4440 Expected ')' to close class definition
;; TEST-USES-ATOM: atom.reader.error.reader.class.missing.close
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.class
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/typeclass-data-layout/atom.reader.error.reader.class.missing.close
;; TEST-MENU-PATH: codegen/errors/reader/typeclass-data-layout/atom.reader.error.reader.class.missing.close
;; TEST-ATOM-LEAF: atom.reader.error.reader.class.missing.close
;; TEST-CLI-TARGET: codegen errors reader typeclass-data-layout

(module Main)
(class Eq a where (=) :: a -> a -> Bool
